@@ -1,3 +1,6 @@
+17th September 2009 - Euan Freeman
+  - Added support for tint2 tooltip customisation
+
 11th September 2009 - Revision 146 - Euan Freeman
   - Added 'panel_dock' option
   
